implemented third and adjusted second feature